--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -44,6 +44,12 @@ Vagrant.configure(2) do |config|
     p.memory = "4096"
   end
 
+  config.vm.provider "libvirt" do |libvirt|
+    libvirt.driver = "kvm"
+    libvirt.memory = 4096
+    #libvirt.cpus = 4
+  end
+
   # Increase memory for Virtualbox
   config.vm.provider "virtualbox" do |vb|
         vb.memory = "4096"
