--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -4,7 +4,7 @@
 $script = <<SCRIPT
 # Update apt and get dependencies
 #sudo yum -y update
-sudo yum install -y unzip curl wget vim-enhanced golang git make docker
+sudo yum install -y unzip curl wget vim-enhanced golang git make docker java
 
 # Install docker
 systemctl start docker
@@ -52,7 +52,8 @@ Vagrant.configure(2) do |config|
 
   # Increase memory for Virtualbox
   config.vm.provider "virtualbox" do |vb|
-        vb.memory = "4096"
+    vb.memory = "4096"
+    vb.name = "vagrant-nomad-scratch"
   end
 
   # Increase memory for VMware
