--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -4,7 +4,7 @@
 $script = <<SCRIPT
 # Update apt and get dependencies
 #sudo yum -y update
-sudo yum install -y unzip curl wget vim-enhanced golang git make docker java
+sudo yum install -y unzip curl wget vim-enhanced golang git make docker java rkt systemd-container
 
 # Install docker
 systemctl start docker
